[package]
name = "persistance_prototype"
version = "0.1.0"
authors = ["Lee Fitchett <lefitche@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gc_test = {path = "./gc_test"}
load_consolidate_test = {path = "./load_consolidate_test"}
shared_lib = {path = "./shared_lib"}

[dev-dependencies]
criterion = "0.3"
tempfile = "3.1.0"

[[bench]]
name = "bench1"
harness = false