[package]
name = "rocks_db_test"
version = "0.1.0"
authors = ["Lee Fitchett <lefitche@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocksdb = "0.13.0"
shared_lib = {path = "../shared_lib"}

[dev-dependencies]
tempfile = "3.1.0"