[package]
name = "shared_lib"
version = "0.1.0"
authors = ["Lee Fitchett <lefitche@microsoft.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["rc"] }
serde_derive = "1.0"
serde_json = "1.0"